tests/fixtures/fail/add_trait_missing_impl.sali
let Number = struct(value: i32)

let main(): i32 = {
  let answer = Number(40) + Number(2)
  answer.value
}
